# attendance-management-system

./: .gitignore  CMakeLists.txt  README.md  build.ps1  main.cpp
frontend/: app.js  index.html  style.css
include/command/: EditAttendanceCommand.h  ICommand.h  MarkAttendanceCommand.h
include/entity/: AttendanceRecord.h  AttendanceStatus.h  Comment.h  Date.h  Person.h  Student.h  Teacher.h
include/manager/: AttendanceManager.h  StudentRegistry.h
include/service/: AnalyticsEngine.h  FileManager.h  Logger.h  ReportGenerator.h  UndoRedoStack.h
include/ui/: MenuController.h
include/util/: Utils.h
src/command/: EditAttendanceCommand.cpp  MarkAttendanceCommand.cpp
src/entity/: AttendanceRecord.cpp  Comment.cpp  Date.cpp  Person.cpp  Student.cpp  Teacher.cpp
src/manager/: AttendanceManager.cpp  StudentRegistry.cpp
src/service/: AnalyticsEngine.cpp  FileManager.cpp  Logger.cpp  ReportGenerator.cpp  UndoRedoStack.cpp
src/ui/: MenuController.cpp
test/: tests.cpp
